--- a/.gitignore
+++ b/.gitignore
@@ -274,3 +274,7 @@ TSWLatexianTemp*
 
 # Makeindex log files
 *.lpz
+
+# Automatically generated files from Mendeley
+*.bib
+!Desenvolvimento de ROV.bib
